# Vantage-MCP

./: .gitignore  README.md  main.py  pyproject.toml
cicd/: compare_baseline_report.py  suggest_code_fix.py
prompts/: guide_chain_vulnerabilities.py  guide_pentest_workflow.py
resources/: auth_jwt.md  prototype_pollution.md  sqli.md  ssrf.md  ssti.md  xss.md
tools/: authenticate.py  check_headers.py  curl_request.py  cve_lookup.py  find_routes.py  fingerprint.py  generate_report.py  get_vulnerability_knowledge.py  test_sqli.py  test_ssti.py  test_xss.py
utils/: http_client.py
